--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,34 +1,51 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "mobile",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.6",
-    "@react-navigation/native": "^5.1.7",
-    "@react-navigation/stack": "^5.2.14",
-    "axios": "^0.21.2",
-    "expo": "~37.0.3",
-    "expo-location": "~8.1.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-maps": "0.26.1",
-    "react-native-reanimated": "~2.10.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7",
-    "react-native-webview": "11.0.0",
-    "socket.io-client": "^2.3.0"
+    "@expo-google-fonts/bai-jamjuree": "^0.2.3",
+    "@expo-google-fonts/roboto": "^0.2.3",
+    "@types/react": "~18.0.27",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
+    "expo": "~48.0.15",
+    "expo-auth-session": "~4.0.3",
+    "expo-constants": "~14.2.1",
+    "expo-crypto": "~12.2.1",
+    "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-location": "~15.1.1",
+    "expo-router": "^1.5.3",
+    "expo-secure-store": "~12.1.1",
+    "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-maps": "1.3.2",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "socket.io-client": "^4.6.1",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@babel/core": "^7.20.0",
+    "@rocketseat/eslint-config": "^1.2.0",
+    "eslint": "^8.40.0",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "react-native-svg-transformer": "^1.0.0",
+    "tailwindcss": "^3.3.2"
+  },
+  "overrides": {
+    "metro": "0.76.0",
+    "metro-resolver": "0.76.0"
   },
   "private": true
 }
